imporing google font

--- a/frontend/styles/global.css
+++ b/frontend/styles/global.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+HK:wght@100;300;400;500;700;900&display=swap');
+
 .container {
   width: 92%;
   max-width: 1327px;
