--- a/frontend/styles/index.css
+++ b/frontend/styles/index.css
@@ -1,8 +1,9 @@
-@import "tailwindcss/base";
+@import 'tailwindcss/base';
 
-@import "tailwindcss/components";
+@import 'tailwindcss/components';
 
-@import "./global.css";
+@import './global.css';
 
-@import "tailwindcss/utilities";
+@import 'tailwindcss/utilities';
 /* import components styles */
+@import './heading.css';
