Added position to gradient

--- a/frontend/styles/heading.css
+++ b/frontend/styles/heading.css
@@ -4,6 +4,7 @@
     theme('colors.c200') 0%,
     rgba(0, 0, 0, 0) 40%
   );
+  background-position-y: -0.27em;
 }
 
 .gradient-blue {
@@ -12,4 +13,5 @@
     theme('colors.c300') 0%,
     rgba(0, 0, 0, 0) 40%
   );
+  background-position-y: -0.27em;
 }
