--- a/frontend/components/footer/footer.css
+++ b/frontend/components/footer/footer.css
@@ -3,4 +3,7 @@
     background-size: 100%;
     background-repeat: no-repeat;
     transform: rotate(165deg);
+    left: 60%;
+    top: -10%;
+    
 }
