import topbar css

--- a/frontend/styles/index.css
+++ b/frontend/styles/index.css
@@ -9,4 +9,5 @@
 @import './heading.css';
 @import './goals.css';
 @import './patches.css';
-@import './topbar.css'
+@import './topbar.css';
+@import './footer.css'
