--- a/frontend/styles/global.css
+++ b/frontend/styles/global.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+HK:wght@100;300;400;500;700;900&display=swap');
-
 html,
 body {
   overflow-x: hidden;
@@ -18,7 +16,7 @@ input {
   box-sizing: border-box;
   border: solid black 1px;
 }
-input[type=submit]{
+input[type='submit'] {
   background-color: black;
   color: white;
   cursor: pointer;
