adde fixed widht to card

--- a/frontend/styles/index.css
+++ b/frontend/styles/index.css
@@ -9,5 +9,6 @@
 @import './heading.css';
 @import './goals.css';
 @import './patches.css';
+@import './how_it_works.css';
 @import './topbar.css';
 @import './footer.css';
