--- a/frontend/styles/global.css
+++ b/frontend/styles/global.css
@@ -23,3 +23,7 @@ input[type=submit]{
   color: white;
   cursor: pointer;
 }
+
+.global-btn:hover {
+  box-shadow: 0px 8px 20px 3px rgba(0, 0, 0, 0.08);
+}
