--- a/frontend/styles/global.css
+++ b/frontend/styles/global.css
@@ -7,7 +7,7 @@ body {
 }
 .container {
   width: 92%;
-  max-width: 1327px;
+  max-width: 1328px;
   margin: 0 auto;
 }
 
@@ -18,12 +18,8 @@ input {
   box-sizing: border-box;
   border: solid black 1px;
 }
-input[type=submit]{
+input[type='submit'] {
   background-color: black;
   color: white;
   cursor: pointer;
-}
-
-.global-btn:hover {
-  box-shadow: 0px 8px 20px 3px rgba(0, 0, 0, 0.08);
 }
