--- a/frontend/styles/global.css
+++ b/frontend/styles/global.css
@@ -15,11 +15,10 @@ input {
   width: 100%;
   padding: 1rem;
   margin: 0.5rem 0;
-  box-sizing: border-box;
-  border: solid black 1px;
+  border: solid theme('colors.c100') 1px;
 }
 input[type='submit'] {
-  background-color: black;
-  color: white;
+  background-color: theme('colors.c100');
+  color: theme('colors.c000');
   cursor: pointer;
 }
