Unified spacing between sections by : - introducing a global padding for section element - Fixing section not using section elements to use it - Fixing bugs that happened due this changes

--- a/frontend/styles/global.css
+++ b/frontend/styles/global.css
@@ -22,3 +22,18 @@ input[type='submit'] {
   color: theme('colors.c000');
   cursor: pointer;
 }
+
+.global-section-padding {
+  @apply py-10;
+}
+
+@media (min-width: 1024px) {
+  .global-section-padding {
+    @apply py-16;
+  }
+}
+
+section,
+footer {
+  @extend .global-section-padding;
+}
