--- a/frontend/styles/global.css
+++ b/frontend/styles/global.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+HK:wght@100;300;400;500;700;900&display=swap');
+
+
 
 html,
 body {
@@ -50,4 +51,59 @@ p {
 #nprogress .bar {
   background: #66f28d !important;
   height: 4px !important;
+}
+
+/* noto-sans-hk-100 - latin */
+@font-face {
+  font-family: 'Noto Sans HK';
+  font-style: normal;
+  font-weight: 100;
+  src: local('Noto Sans HK Thin'), local('NotoSansHK-Thin'),
+       url('../fonts/noto-sans-hk-v5-latin-100.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+       url('../fonts/noto-sans-hk-v5-latin-100.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+/* noto-sans-hk-regular - latin */
+@font-face {
+  font-family: 'Noto Sans HK';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Noto Sans HK Regular'), local('NotoSansHK-Regular'),
+       url('../fonts/noto-sans-hk-v5-latin-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+       url('../fonts/noto-sans-hk-v5-latin-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+/* noto-sans-hk-300 - latin */
+@font-face {
+  font-family: 'Noto Sans HK';
+  font-style: normal;
+  font-weight: 300;
+  src: local('Noto Sans HK Light'), local('NotoSansHK-Light'),
+       url('../fonts/noto-sans-hk-v5-latin-300.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+       url('../fonts/noto-sans-hk-v5-latin-300.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+/* noto-sans-hk-500 - latin */
+@font-face {
+  font-family: 'Noto Sans HK';
+  font-style: normal;
+  font-weight: 500;
+  src: local('Noto Sans HK Medium'), local('NotoSansHK-Medium'),
+       url('../fonts/noto-sans-hk-v5-latin-500.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+       url('../fonts/noto-sans-hk-v5-latin-500.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+/* noto-sans-hk-700 - latin */
+@font-face {
+  font-family: 'Noto Sans HK';
+  font-style: normal;
+  font-weight: 700;
+  src: local('Noto Sans HK Bold'), local('NotoSansHK-Bold'),
+       url('../fonts/noto-sans-hk-v5-latin-700.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+       url('../fonts/noto-sans-hk-v5-latin-700.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+/* noto-sans-hk-900 - latin */
+@font-face {
+  font-family: 'Noto Sans HK';
+  font-style: normal;
+  font-weight: 900;
+  src: local('Noto Sans HK Black'), local('NotoSansHK-Black'),
+       url('../fonts/noto-sans-hk-v5-latin-900.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+       url('../fonts/noto-sans-hk-v5-latin-900.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
