--- a/frontend/styles/markdown.css
+++ b/frontend/styles/markdown.css
@@ -8,10 +8,18 @@ h6 {
   font-weight: inherit;
 }
 
+.markdown {
+  width: 90%;
+}
+
 .markdown p {
   font-size: 16px;
-  width:80%;
-  margin:3rem auto;
+  margin: 3rem 0 auto;
   color: rgb(125, 125, 125);
- 
+}
+
+@media screen and (min-width: 1024px) {
+  .markdown {
+    width: 70%;
+  }
 }
